--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,5 @@
 permalink: pretty
 theme: jekyll_patternbot
+
+patternbot:
+  font_url: "https://fonts.googleapis.com/css?family=Muli:200,300,400,700&display=swap"
