--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,7 @@ permalink: pretty
 theme: jekyll_patternbot
 
 patternbot:
+    title: "Fairy Cake"
+    descripition: |
+    This is a small bakery that produce cakes and bread.
   font_url: "https://fonts.googleapis.com/css?family=Muli:200,300,400,700&display=swap"
