--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ theme: jekyll_patternbot
 patternbot:
     title: "Fairy Cake"
     descripition: |
-    This is a small bakery that produce cakes and bread.
+    This is a small bakery that produce cakes and bread.Come and buy our products now!
   font_url: "https://fonts.googleapis.com/css?family=Muli:200,300,400,700&display=swap"
   colors:
     background: "--color-secondary-light"
