Update main config file
Display card with background

--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,4 @@ patternbot:
     patterns:
       brand.logos: "--color-secondary"
       buttons.ghost: "--color-secondary"
+      cards: "--color-secondary"
